--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,9 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
 spring.h2.console.enabled=true
-jwt.signing.key=
+#ignore null fields in json
+spring.jackson.default-property-inclusion=NON_NULL
+#Security secret key
+jwt.signing.key=c2VjcmV0cGFzc3dvcmQ=
+#3 minutes validity
+jwt.token.validity=180000
