--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,29 @@
 server.port=8088
 spring.application.name=login-service
 management.endpoints.web.exposure.include=info, health
-#DB
-spring.datasource.url=jdbc:h2:mem:login-db
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.defer-datasource-initialization=always
+#DB H2
+#spring.datasource.url=jdbc:h2:mem:login-db
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=password
+#spring.h2.console.enabled=true
+#spring.h2.allowed.resources=/h2-console/**
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.defer-datasource-initialization=always
+#DB MySql
+spring.datasource.url=jdbc:mysql://localhost:3306/MICROS?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=R!nald!1976
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.show_sql=true
-spring.h2.console.enabled=true
 #ignore null fields in json
-spring.jackson.default-property-inclusion=NON_NULL
+#spring.jackson.default-property-inclusion=NON_NULL
 #Security secret key
+#JWT
 jwt.signing.key=c2VjcmV0cGFzc3dvcmQ=
 #3 minutes validity
 jwt.token.validity=180000
+#logging.level.com.zaxxer.hikariconfig=DEBUG
