--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,5 @@ jwt.signing.key=c2VjcmV0cGFzc3dvcmQ=
 #3 minutes validity
 jwt.token.validity=180000
 #logging.level.com.zaxxer.hikariconfig=DEBUG
+#logging.level.org.springframework.boot=DEBUG
+logging.level.org.apache.catalina.authenticator.AuthenticatorBase=DEBUG
