Fix DB errors, Add shouldNotFilter in JwtAuthenticationFilter

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=8088
 spring.application.name=login-service
 management.endpoints.web.exposure.include=info, health
+
 #DB H2
 #spring.datasource.url=jdbc:h2:mem:login-db
 #spring.datasource.driverClassName=org.h2.Driver
@@ -29,3 +30,9 @@ jwt.token.validity=180000
 #logging.level.com.zaxxer.hikariconfig=DEBUG
 #logging.level.org.springframework.boot=DEBUG
 logging.level.org.apache.catalina.authenticator.AuthenticatorBase=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.security.web.access.intercept.AuthorizationFilter=DEBUG
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
+logging.level.org.springframework.security.web.FilterChainProxy=TRACE
+#OncePerRequestFilter
+secured.requests.ignored={'\/auth\/signup', '\/auth\/signin', '\/h2-console\/**', '\/index.html', '\/'}
