--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,4 +35,4 @@ logging.level.org.springframework.security.web.access.intercept.AuthorizationFil
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
 logging.level.org.springframework.security.web.FilterChainProxy=TRACE
 #OncePerRequestFilter
-secured.requests.ignored={'\/auth\/signup', '\/auth\/signin', '\/h2-console\/**', '\/index.html', '\/'}
+secured.requests.ignored={'\/auth\/signup', '\/auth\/signin', '\/h2-console\/**', '\/index.html', '\/', '\/auth\/user'}
