Add exception handling properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,3 +36,8 @@ logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
 logging.level.org.springframework.security.web.FilterChainProxy=TRACE
 #OncePerRequestFilter
 secured.requests.ignored={'\/auth\/signup', '\/auth\/signin', '\/h2-console\/**', '\/index.html', '\/', '\/auth\/user'}
+#https://reflectoring.io/spring-boot-exception-handling/
+server.error.include-message=always
+server.error.include-binding-errors=always
+server.error.include-stacktrace=on_param
+server.error.include-exception=false
