--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ management.endpoints.web.exposure.include=info, health
 spring.datasource.url=jdbc:mysql://localhost:3306/MICROS?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=R!nald!1976
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.generate-ddl=true
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=update
@@ -41,3 +41,5 @@ server.error.include-message=always
 server.error.include-binding-errors=always
 server.error.include-stacktrace=on_param
 server.error.include-exception=false
+#https://github.com/spring-projects/spring-data-jpa/issues/2717 --> HHH90000021: Encountered deprecated setting [javax.persistence.sharedCache.mode], use [jakarta.persistence.sharedCache.mode] instead
+spring.jpa.properties.jakarta.persistence.sharedCache.mode=ENABLE_SELECTIVE
